--- a/styles/base.less
+++ b/styles/base.less
@@ -1,16 +1,12 @@
-
 /* CSS pre-processing by {less}. http://lesscss.org/
 ***************************************************/
-
-
 
 /* General syles
 ***************************************************/
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   font-size: 100%;
   font-weight: normal;
@@ -22,7 +18,9 @@ body {
   max-width: 1020px;
   padding: 6vw;
 
-  h1, h2, h3 {
+  h1,
+  h2,
+  h3 {
     font-weight: normal;
     line-height: 1.2em;
   }
@@ -40,7 +38,8 @@ body {
   margin-bottom: 4vw;
 }
 
-.site-navigation { }
+.site-navigation {
+}
 
 .site-navigation-list {
   padding: 0;
@@ -66,19 +65,18 @@ body {
   &.active-link > a {
     color: #999;
   }
-
 }
 
 .site-title-heading {
-
   .site-title-link {
-    color: #111;
+    color: #fff;
     font-weight: 400;
     text-decoration: none;
   }
 }
 
-.content-container { }
+.content-container {
+}
 
 .site-footer {
   font-size: 75%;
@@ -86,32 +84,24 @@ body {
   margin-bottom: 4vw;
 }
 
-
-
 /* Homepage
 ***************************************************/
 
-body.homepage { }
-
-
+body.homepage {
+}
 
 /* Blog list
 ***************************************************/
 
 body.collection-type-blog.view-list {
-
   .blog-list-item + .blog-list-item {
     margin-top: 3vw;
   }
 }
 
-
-
 /* Break grid and stack blocks on small screens
 ***************************************************/
 
 @media screen and (max-width: 640px) {
-  @import 'sqs-grid-breaker';
+  @import "sqs-grid-breaker";
 }
-
-
